--- a/pages/templates/home.html
+++ b/pages/templates/home.html
@@ -5,6 +5,6 @@
 <h1>Homepage</h1>
 
 <div>
-  Welcome to my home page!
+  Welcome to my home page! My name is Patrick Lemoine
 </div>
 {% endblock content %}
